--- a/frontend/src/app/page.css
+++ b/frontend/src/app/page.css
@@ -1,8 +1,3 @@
-:root {
-  --primary-color: #1a446c;
-  --secondary-color: #3db4c0;
-}
-
 body {
   font-family: 'Poppins', sans-serif;
 }
@@ -44,10 +39,10 @@ body {
 }
 
 
-.leyte-bg-pattern {
+/* .leyte-bg-pattern {
   background-image: radial-gradient(var(--secondary-color) 1px, transparent 1px);
   background-size: 40px 40px;
-}
+} */
 
 .section-title {
   position: relative;
