--- a/frontend/src/app/test-page/page.css
+++ b/frontend/src/app/test-page/page.css
@@ -1,4 +1,19 @@
-.bg-pattern {
-    background-image: radial-gradient(var(--secondary-color) 1px, transparent 1px);
-    background-size: 40px 40px;
+.timeline-line {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    width: 2px;
+    height: 100%;
+    background-color: black;
+    transform: translateX(-50%);
+}
+
+.timeline-dot {
+    width: 10px;
+    height: 10px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
