--- a/frontend/src/components/component.css
+++ b/frontend/src/components/component.css
@@ -1,5 +1,11 @@
 /* Header */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 .navbar {
     background: white !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+#navbarNav{
+    color: black !important;
 }
