--- a/frontend/src/app/test-page/page.css
+++ b/frontend/src/app/test-page/page.css
@@ -1,19 +1,7 @@
-.timeline-line {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    width: 2px;
-    height: 100%;
-    background-color: black;
-    transform: translateX(-50%);
-}
-
-.timeline-dot {
-    width: 10px;
-    height: 10px;
-    background-color: black;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+.carousel-image {
+    background: linear-gradient(rgba(26, 68, 108, 0.7), rgba(61, 180, 192, 0.3));
+    width: 100%;
+    height: 90vh;
+    object-fit: cover;
+    /* Ensures the image covers the container without distortion */
 }
