--- a/frontend/src/components/component.css
+++ b/frontend/src/components/component.css
@@ -6,6 +6,23 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-#navbarNav{
+#navbarNav {
     color: black !important;
+}
+
+.carousel-image {
+    background: linear-gradient(rgba(26, 68, 108, 0.7), rgba(61, 180, 192, 0.3));
+    width: 100%;
+    height: 90vh;
+    object-fit: cover;
+    /* Ensures the image covers the container without distortion */
+}
+
+#panorama {
+    width: 100%;
+    height: 100vh;
+}
+
+.user-profile:hover {
+    outline: 4px solid #d3d3d3;
 }
