--- a/frontend/src/components/component.css
+++ b/frontend/src/components/component.css
@@ -2,7 +2,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
 .navbar {
-    background: white !important;
+    background: rgba(255, 255, 255, 0.9) !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
