--- a/frontend/src/app/pages/about/page.css
+++ b/frontend/src/app/pages/about/page.css
@@ -30,12 +30,11 @@
 .card {
     max-width: 450px;
     border-radius: 12px;
-    transition: transform 0.3s ease;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 .card:hover {
-    transform: scale(1.03);
-    transition: transform 0.3s ease-in-out;
+    box-shadow: 0 0 15px var(--secondary-color)!important;
 }
 
 .member-image {
