--- a/frontend/src/app/pages/destinations/destination.module.css
+++ b/frontend/src/app/pages/destinations/destination.module.css
@@ -1,16 +1,3 @@
-.nav-pills .nav-link {
-    color: black !important;
-}
-
-.nav-pills .nav-link.active {
-    background-color: black !important;
-    color: white !important;
-}
-
-.nav-pills .nav-link:hover {
-    border: 1px solid black !important;
-}
-
 .destination-title {
     position: relative;
     display: block;
@@ -29,7 +16,10 @@
 }
 
 .destination-card {
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .destination-card:hover {
@@ -37,6 +27,6 @@
     transform: scale(1.01);
 }
 
-.badge{
-    background-color: var(--primary-color) ;
+.badgeTitle {
+    background-color: var(--primary-color);
 }
