--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,8 +2,9 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
 :root {
-    --primary-color: #1a446c;
+    --primary-color: #07131f;
     --secondary-color: #3db4c0;
+    --background-color: rgba(211, 211, 211, 0.7);
 }
 
 #panorama {
@@ -15,14 +16,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
-
 .navbar {
     background: rgba(255, 255, 255, 1) !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-#navbarNav {
-    color: black !important;
 }
 
 .carousel-image {
@@ -35,3 +31,5 @@
 .user-profile:hover {
     outline: 4px solid #d3d3d3;
 }
+
+/* test page css */
