--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -32,4 +32,29 @@
     outline: 4px solid #d3d3d3;
 }
 
+/* nerofin */
+
+.fixed-button {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 1000;
+    width: 60px;
+    height: 60px;
+    padding: 0;
+    border-radius: 25%;
+    background-color: var(--primary-color);
+    box-shadow: 0 0 5px 2px rgba(0, 255, 255, 0.8);
+
+    transition: transform 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.fixed-button:hover {
+    transform: scale(1.1);
+}
+
 /* test page css */
