--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -22,10 +22,30 @@
 }
 
 .carousel-image {
-    background: linear-gradient(rgba(26, 68, 108, 0.7), rgba(61, 180, 192, 0.3));
     width: 100%;
     height: 90vh;
     object-fit: cover;
+}
+
+/*
+center text on carousel
+.carousel-item-content {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 1;
+} */
+
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
 }
 
 .user-profile:hover {
@@ -45,6 +65,7 @@
     width: 60px;
     height: 60px;
     padding: 0;
+    margin: 0;
     border-radius: 25%;
     background-color: var(--primary-color);
     box-shadow: 0 0 5px 2px rgba(0, 255, 255, 0.8);
